--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,136 +2,14 @@
 /////////////////////////////////////////////////////////////////////////////
 //Logo
 .logo {
-   height: 3.25rem;
+   height: 6.25rem;
    margin-left: 2rem;
-
-}
-
-/////////////////////////////////////////////////////////////////////////////
-// Search 
-.search {
-
-   flex: 0 0 40%;
-
-   display: flex;
-   align-items: center;
-   justify-content: center;
-
-   @media only screen and (max-width: $bp-smallest) {
-   order: 1;
-   flex: 0 0 100%;
-   background-color: var(--color-grey-light-2);
-   
+   @media only screen and (max-width: $bp-medium) {
+      height: 4rem;
    }
-
-   &__input {
-      font-family: inherit;
-      font-size: inherit;
-      color: inherit;
-      background-color: var(--color-grey-light-2);
-      border: none;
-      padding: .7rem 2rem;
-      border-radius: 100px;
-      width: 90%;
-      transition: all .2s;
-      margin-right: -3.5rem;
-
-      &:focus {
-         outline: none;
-         width: 100%;
-         background-color: var(--color-grey-light-3);
-      }
-
-      &::-webkit-input-placeholder {
-         font-weight: 100;
-         color: var(--color-grey-light-4);
-      }
-   }
-
-
-
-   &__input:focus + &__button {
-      background-color: var(--color-grey-light-3);
-   }
-
-   &__button {
-      border: none;
-      background-color: var(--color-grey-light-2);
-
-      &:focus {
-         outline: none;
-      }
-
-      &:active {
-         transform: translateY(2px);
-      }
-   }
-
-      &__icon {
-         height: 2rem;
-         width: 2rem;
-         fill: var(--color-grey-dark-3);
-      }
 }
 
 
-/////////////////////////////////////////////////////////////////////////////
-// User navigation
-.user-nav {
-   align-self: stretch;
-   display: flex;
-   align-items: center;
-   
-
-   & > * {
-      padding: 0 2rem;
-      cursor: pointer;
-      height: 100%;
-
-      display: flex;
-      align-items: center;
-   }
-
-   & > *:hover {
-      background-color: var(--color-grey-light-2);
-   }
-
-   &__icon-box {
-      position: relative;
-   }
-
-   &__icon {
-      height: 2.25rem;
-      width: 2.25rem;
-      fill: var(--color-grey-dark-2);
-      
-   }
-
-   &__notification {
-      font-size: .8rem;
-      height: 1.75rem;
-      width: 1.75rem;
-      border-radius: 50%;
-      background-color: var(--color-primary);
-      color: #fff;
-      position: absolute;
-      top: 1.5rem;
-      right: 1.1rem;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-   }
-
-   &__user-photo {
-      height: 3.75rem;
-      border-radius: 50%;
-      margin-right: 1rem;
-   }
-
-
-}
 
 /////////////////////////////////////////////////////////////////////////////
 // side nav
@@ -141,6 +19,7 @@
    list-style: none;
    margin-top: 3.5rem;
    
+   
    @media only screen and (max-width: $bp-medium) {
       display: flex;
       margin: 0;
@@ -148,6 +27,13 @@
 
    &__item {
       position: relative;
+      width: 100%;
+
+
+      &:not(:first-child) {
+         display: flex;
+         float: left;
+      }
 
       &:not(:last-child){
          margin-bottom: .5rem;
@@ -159,6 +45,7 @@
 
       @media only screen and (max-width: $bp-medium) {
          flex: 1;
+         justify-content: center;
          }
    }
 
@@ -197,7 +84,7 @@
       padding: 1.5rem 3rem;
       position: relative;
       z-index: 10;
-      
+      width: 100%;
       display: flex;
       align-items: center;
 
@@ -220,10 +107,7 @@
       fill: currentColor;
 
       @media only screen and (max-width: $bp-small){
-      margin-right: 0;
-      margin-bottom: .07rem;
-      width: 1.5rem;
-      height: 1.5rem;
+      display: none;
       }
    }
 
@@ -264,9 +148,20 @@
    align-items: center;
    border-bottom: var(--line); 
    
+   &__home {
+      
+      @media only screen and (max-width: $bp-tiny) {
+         display: none !important;
+      }
+   }
+
    @media only screen and (max-width: $bp-small){
       font-size: 1.8rem;
       padding: 1.25rem 2rem;
+   }
+   @media only screen and (max-width: $bp-tiny){
+      font-size: 1rem;
+      padding: 0;
 
    }
 
@@ -276,19 +171,13 @@
       text-transform: uppercase;
       letter-spacing: 1px;
       padding: 1.5rem 3rem;
-   }
-
-   &__stars {
       margin-right: auto;
-      display: flex;
+      @media only screen and (max-width: $bp-tiny) {
+         font-size: 1.2rem;
+      }
    }
 
-   &__icon-star,
-   &__icon-location {
-      width: 1.75rem;
-      height: 1.75rem;
-      fill: var(--color-primary);
-   }
+
 
    &__location {
       font-size: 1.2rem;
@@ -296,9 +185,6 @@
       align-items: center;
    }
 
-   &__icon-location {
-      margin-right: .5rem;
-   }
 
    &__rating {
       background-color: var(--color-primary);
@@ -325,6 +211,9 @@
       @media only screen and (max-width: $bp-small){
       font-size: 1.8rem;
       }
+      @media only screen and (max-width: $bp-tiny) {
+         font-size: 1.3rem;
+      }
    }
 
    &__rating-count {
@@ -350,6 +239,17 @@
    background-color: transparent;
    cursor: pointer;
    transition: all .2s;
+
+   &__showall {
+      text-decoration: none;
+      color: var(--color-primary);
+   }
+   &__place {
+      border-bottom: none;
+   }
+   @media only screen and (max-width: $bp-tiny) {
+      margin-right: 1rem;
+   }
 
 
 
@@ -417,6 +317,9 @@
    &__item {
       flex: 0 0 50%;
       margin-bottom: .7rem;
+      @media only screen and (max-width: $bp-tiny){
+         flex: 0 0 100%;
+      }
 
    }
 
@@ -428,18 +331,15 @@
       margin-right: .7rem;
 
       //older browsers
-      background-image: url(../img/chevron-thin-right.svg);
-      background-size: cover;
+      //?background-image: url(../img/chevron-thin-right.svg);
+      //?background-size: cover;
 
       //newer browser - masks
-      @supports (-webkit-mask-image: url()) or (-webkit-mask-image: url()) {
-         background-color: var(--color-primary);
-         -webkit-mask-image: url(../img/chevron-thin-right.svg);
-         mask-image: url(../img/chevron-thin-right.svg);
-         -webkit-mask-size: cover;
-         mask-size: cover;
-         background-image: none;
-      }
+      background-color: var(--color-primary);
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+      mask-size: cover;
    }
 }
 
@@ -461,6 +361,9 @@
 
    &__friends {
       display: flex;
+      @media only screen and (max-width: $bp-tiny) {
+         flex-wrap: wrap;
+      }
    }
    &__photo {
       box-sizing: content-box;
@@ -558,13 +461,6 @@
       padding: 2.5rem 0;
    }
 
-   &__book-now {
-      font-size: 2rem;
-      font-weight: 300;
-      text-transform: uppercase;
-      margin-bottom: 2.5rem;
-   }
-
 
 }
 
@@ -583,6 +479,16 @@
    overflow: hidden;
    cursor: pointer;
 
+
+
+   &__book {
+      list-style: none;
+      text-decoration: none;
+      color: #fff;
+   }
+
+   
+
    & > * { 
       display: inline-block;
       height: 100%;
@@ -591,6 +497,10 @@
    }
    &__visable {
       padding: 2rem 7.5rem;
+      @media only screen and (max-width: $bp-tiny){
+         font-size: 1rem;
+         padding: 1rem 2rem !important;
+      }
    }
 
    &__invisable {
@@ -598,6 +508,10 @@
       padding: 2rem 0;
       left: 0;
       top: -100%;
+      @media only screen and (max-width: $bp-tiny){
+         font-size: 1rem;
+         padding: 1rem 2rem !important;
+      }
    }
 
    &:hover {
@@ -619,3 +533,5 @@
    
    
 }
+
+
