--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,6 +11,10 @@
         max-width: 100%;
         width: 100%;
     }
+
+   // &__2 {
+     //   max-width: 150rem;
+    //}
 }
 
 .header {
@@ -26,7 +30,7 @@
     @media only screen and (max-width: $bp-smallest) {
     flex-wrap: wrap;
     align-content: space-around;
-    height: 11rem;
+    height: 7rem;
     
     }
 }
@@ -34,8 +38,9 @@
     display: flex;
     @media only screen and (max-width: $bp-medium) {
         flex-direction: column;
-        
     }
+
+
 
 }
 
@@ -71,6 +76,9 @@
     @media only screen and (max-width: $bp-small){
         flex-direction: column;
     }
+    @media only screen and (max-width: $bp-tiny) {
+        padding: 1rem;
+    }
 
 }
 
@@ -103,4 +111,12 @@
     flex-direction: column ;
     align-items: center;
     
+}
+
+.section-book {
+    background-image: url(../img/treeswing.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 60vh;
 }
